
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;



int get08(u_char *data, int *num) {
    if(num) {
        *num = data[0];
    }
    return(1);
}
